# speech-to-contract-ai

./: .gitignore  README.md  contract_classifier.py  keyword_extractor.py  package-lock.json  package.json  test_temp.py
PromptDocs_park/GPT API 이용방법/: Chat GPT API 사용법 1b89c110be4180eb8a40e9e771997692.md
PromptDocs_park/계약서 규격화를 위한 조사/: 계약서 규격화를 위한 조사 1cc9c110be41804a943ee5e806e99cc7.md  여행계약서.hwp
PromptDocs_park/계약유형분류프롬프트개선/: 계약 유형 분류 프롬프트 개선 1f69c110be4180e88b34edd1de6dec21.md
PromptModules_park/: .gitignore  contract_annotater.py  contract_classifier.py  contract_review_schema.py  keyword_extractor.py  keyword_schema.py
PromptModules_yuun/: contract_annotater.py  contract_classifier.py  contract_prompt.py  contract_review_schema.py  data_preprocess.py  data_preprocessor.py  keyword_extractor.py  keyword_schema.py  test_contract_pipeline.py  test_pipeline_simple.py
docs/: api-spec.md  backend-structure.md  db-schema.md
schemas/: 고용_schema.json
src/backend/: nginx.conf  pyproject.toml
src/backend/app/: main.py
src/backend/app/core/: celery_app.py  config.py  dependencies.py  llm.py  logger.py  security.py  stt.py
src/backend/app/db/: init_db.py  session.py
src/backend/app/models/: contract.py  generation.py  suggestion.py  token.py  transcription.py  user.py
src/backend/app/prompts/: annotater.py  keyword_extractor.py  keyword_schema.py  preprocessor.py  review_schema.py  stopwords.py  type_classifier.py
src/backend/app/routers/: auth.py  contracts.py  generations.py  transcriptions.py
src/backend/app/schemas/: auth.py  contract.py  generation.py  transcription.py
src/backend/app/services/: auth.py  contracts.py  generations.py  transcriptions.py
src/backend/app/tasks/: generations.py  jobs.py  transcriptions.py
src/frontend/: package-lock.json  (+1 more)
templates/: 고용_template.md
설계 문서/: 법률자문 추가 로직 설계 .md  법률자문 추가 로직 설계(수정).md  임시-프롬프트-테스트-코드.md
(+177 files in other folders)
